# ferramentas-estudo

./: README.md  pyproject.toml  youtube_generate_txt.ipynb  youtube_summarize.ipynb
graphrag/: pyproject.toml
graphrag/input/: ENTENDA_O_DISPENSACIONALISMO_CLÁSSICO_NESTE_VÍDEO.txt  ESSA_É_A_MINHA_POSIÇÃO_ESCATOLÓGICA_E_EU_EXPLICO_O_PORQUÊ.txt  O_QUE_PENSAM_OS_DISPENSACIONALISTAS_REVISADOS?.txt
