[tool.poetry]
name = "graphrag_estudo"
version = "0.1.0"
description = ""
authors = ["Cristian C dos Santos <perestra.ccds@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
graphrag = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
